networking/gateways/home/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-home
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy-home-proxy
    namespace: envoy-gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway-home
  namespace: envoy-gateway-system
  annotations:
    lbipam.cilium.io/ips: "192.168.2.100"
spec:
  gatewayClassName: envoy-home
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "*.home.timosur.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-home-timosur-com
